--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -9,17 +9,24 @@ a {
   color: #727e86;
 }
 
-a, a:hover, a:visited, a:active {
+a,
+a:hover,
+a:visited,
+a:active {
   text-decoration: none;
 }
 .img-fluid {
-  width:  100%;
+  width: 100%;
+}
+.card-body {
+  width: 214px;
 }
 .card-img-top {
   height: 400px;
 }
 .navbar-collapse {
   justify-content: space-between;
+  align-items: center;
 }
 a:hover {
   cursor: pointer;
@@ -29,9 +36,6 @@ section {
   margin-top: 2em;
   margin-bottom: 2em;
 }
-
-
-
 
 /* Common Styles */
 .invisible {
@@ -72,10 +76,12 @@ section {
   font-size: 11px;
   line-height: 21px;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
   border-radius: 50%;
   background: linear-gradient(90deg, #ff65a5 1.11%, #ff8076 100%);
-  box-shadow: 0px 2px 8px rgba(255, 101, 165, 0.6), inset 0px 1px 1px #ff8076;
+  box-shadow:
+    0px 2px 8px rgba(255, 101, 165, 0.6),
+    inset 0px 1px 1px #ff8076;
 }
 .header-controls-search-form {
   position: absolute;
@@ -85,13 +91,13 @@ section {
   width: 233px;
   height: 38px;
   padding: 0 20px;
-  background: #FFFFFF;
-  box-shadow: 0px 0px 10px #D4E4E6;
+  background: #ffffff;
+  box-shadow: 0px 0px 10px #d4e4e6;
   border-radius: 50px;
   text-align: right;
 }
 .header-controls-search-form .form-control {
-  width: 100%;
+  max-width: 100%;
   height: 100%;
   color: #333333;
   border: none;
@@ -115,13 +121,23 @@ section {
   font-size: 48px;
   line-height: 98px;
   text-align: center;
-  color: #FFFFFF;
-  background: linear-gradient(270deg, rgba(161, 179, 191, 0.8) 72.59%, rgba(161, 179, 191, 0) 98.05%);
+  color: #ffffff;
+  background: linear-gradient(
+    270deg,
+    rgba(161, 179, 191, 0.8) 72.59%,
+    rgba(161, 179, 191, 0) 98.05%
+  );
 }
 
 /* Preloader */
+.preloader_container {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
 .preloader {
-  margin: 10px auto;  
+  margin: 10px auto;
   position: relative;
   width: 30px;
   height: 30px;
@@ -136,7 +152,7 @@ section {
   animation: spin 2s ease infinite;
 }
 .preloader :first-child {
-  background: #19A68C;
+  background: #19a68c;
   animation-delay: -1.5s;
 }
 .preloader :nth-child(2) {
@@ -169,11 +185,13 @@ section {
 /* Top Sales */
 .top-sales {
   min-height: 300px;
+  position: relative;
 }
 
 /* Catalog */
 .catalog {
   min-height: 600px;
+  position: relative;
 }
 
 .catalog-categories {
@@ -181,20 +199,20 @@ section {
   margin-bottom: 2em;
 }
 .card-text {
-
-  white-space: nowrap;  /* Не переносим текст на новую строку */
-  overflow: hidden;     /* Скрываем текст, выходящий за пределы контейнера */
+  white-space: nowrap; /* Не переносим текст на новую строку */
+  overflow: hidden; /* Скрываем текст, выходящий за пределы контейнера */
   text-overflow: ellipsis; /* Добавляем многоточие в конце строки */
-  
 }
 .card-img_cont {
   position: relative;
-  width: 214px;       /* Фиксированная ширина контейнера */
-  height: 214px;      /* Фиксированная высота контейнера */
+  width: 214px; /* Фиксированная ширина контейнера */
+  height: 214px; /* Фиксированная высота контейнера */
   overflow: hidden;
 }
 .catalog-item-card {
   margin-bottom: 1em;
+
+  align-items: center;
 }
 
 .catalog-item-size {
@@ -210,13 +228,12 @@ section {
 
 .catalog-search-form {
   display: block;
-  width: 100%;
+  max-width: 100%;
   height: 38px;
   padding: 0 20px;
-  background: #FFFFFF;
-  box-shadow: 0px 0px 10px #D4E4E6;
+  background: #ffffff;
+  box-shadow: 0px 0px 10px #d4e4e6;
   border-radius: 50px;
-  margin-bottom: 2em;
 }
 .catalog-search-form .form-control {
   width: 100%;
@@ -240,12 +257,11 @@ section {
 .footer-pay-systems {
   width: 46px;
   height: 28px;
-  border: 2px solid #FFFFFF;
+  border: 2px solid #ffffff;
   border-radius: 8px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   background-repeat: no-repeat;
   cursor: pointer;
-
 }
 .footer-pay-systems:not(:first-child) {
   margin-left: 5px;
@@ -279,7 +295,6 @@ section {
   margin: 0 5px;
   border-radius: 50%;
   background-repeat: no-repeat;
-  background-image: url(../img/footer-sprite.png);
 }
 .footer-social-link-twitter {
   background-position: -107px -42px;
@@ -308,7 +323,11 @@ section {
   color: #ff0000;
 }
 
-h2, .h2 {
+.nav-item {
+  cursor: pointer;
+}
+h2,
+.h2 {
   margin-bottom: 1.5em;
   margin-top: 2em;
 }
